[gd_scene load_steps=7 format=2]

[ext_resource path="res://Objects/Sushi/Sushi_Plate.gd" type="Script" id=1]
[ext_resource path="res://Arts/Sushi/PlaceHolderFish.jpg" type="Texture" id=2]
[ext_resource path="res://Arts/Scene/PHplate.png" type="Texture" id=3]
[ext_resource path="res://Objects/Sushi/Drag_Plate.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 96.4413

[sub_resource type="Animation" id=2]
resource_name = "pick_up"
length = 0.3
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04, 0.1, 0.18, 0.3 ),
"transitions": PoolRealArray( 0.5, 2, 0.5, 2, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 0.9, 0.9 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ) ]
}

[node name="Sushi_Plate" type="Node2D"]
script = ExtResource( 1 )

[node name="Plate" type="Sprite" parent="."]
modulate = Color( 0.87451, 0.87451, 0.87451, 1 )
position = Vector2( 0, 52.5 )
scale = Vector2( 1, 0.458763 )
z_index = 10
texture = ExtResource( 3 )

[node name="Drag_Plate" type="Area2D" parent="."]
z_index = 12
collision_layer = 64
collision_mask = 0
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="Drag_Plate"]
scale = Vector2( 0.0915582, 0.0882503 )
z_index = 11
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Drag_Plate"]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Drag_Plate"]
anims/pick_up = SubResource( 2 )
[connection signal="area_entered" from="Drag_Plate" to="Drag_Plate" method="_on_Drag_Plate_area_entered"]
[connection signal="area_exited" from="Drag_Plate" to="Drag_Plate" method="_on_Drag_Plate_area_exited"]
[connection signal="mouse_entered" from="Drag_Plate" to="Drag_Plate" method="_on_Sushi_Piece_mouse_entered"]
[connection signal="mouse_exited" from="Drag_Plate" to="Drag_Plate" method="_on_Sushi_Piece_mouse_exited"]
[connection signal="on_dragging" from="Drag_Plate" to="." method="_on_Sushi_on_dragging"]
[connection signal="on_dragging" from="Drag_Plate" to="Drag_Plate" method="_on_Drag_Plate_on_dragging"]
[connection signal="on_released" from="Drag_Plate" to="." method="_on_Sushi_on_released"]
[connection signal="on_released" from="Drag_Plate" to="Drag_Plate" method="_on_Drag_Plate_on_released"]
